--- a/Hot Desc/Views/HotDesc/DateReservation.cshtml
+++ b/Hot Desc/Views/HotDesc/DateReservation.cshtml
@@ -24,7 +24,7 @@
                 <span asp-validation-for="TimeTo" class="text-danger"></span>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary px-3 py-2 my-4">Check available workplaces</button>
+        <button type="submit" class="btn btn-primary px-3 py-2 my-4">Go further -></button>
     </form>
 </div>
 
