--- a/Hot Desc/Views/Reservations/Index.cshtml
+++ b/Hot Desc/Views/Reservations/Index.cshtml
@@ -15,7 +15,7 @@
             }
         </select>
     </div>
-    <button type="submit" class="btn btn-primary px-3 py-2 my-4">Check reserrvations</button>
+    <button type="submit" class="btn btn-primary px-3 py-2 my-4">Check reservations</button>
 </form>
 
 <div class="text-center">
